@@ -25,7 +25,6 @@
 
 package jdk.javadoc.internal.doclets.toolkit.taglets;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 
@@ -40,14 +39,14 @@ import static jdk.javadoc.doclet.Taglet.Location.*;
 
 /**
  * A taglet wrapper, allows the public taglet {@link jdk.javadoc.doclet.Taglet}
- * wrapped into an internal Taglet representation.
+ * wrapped into an internal {@code Taglet} representation.
  *
  *  <p><b>This is NOT part of any supported API.
  *  If you write code that depends on this, you do so at your own risk.
  *  This code and its internal interfaces are subject to change or
  *  deletion without notice.</b>
  */
-public class UserTaglet implements Taglet {
+public final class UserTaglet implements Taglet {
 
     private final jdk.javadoc.doclet.Taglet userTaglet;
 
@@ -95,11 +94,6 @@ public class UserTaglet implements Taglet {
         return userTaglet.getAllowedLocations().contains(TYPE);
     }
 
-    /**
-     * Return true if this <code>Taglet</code> is an inline tag.
-     *
-     * @return true if this <code>Taglet</code> is an inline tag and false otherwise.
-     */
     @Override
     public boolean isInlineTag() {
         return userTaglet.isInlineTag();
@@ -116,14 +110,14 @@ public class UserTaglet implements Taglet {
     }
 
     @Override
-    public Content getTagletOutput(Element element, DocTree tag, TagletWriter writer){
+    public Content getInlineTagOutput(Element element, DocTree tag, TagletWriter writer) {
         Content output = writer.getOutputInstance();
-        output.add(new RawHtml(userTaglet.toString(Collections.singletonList(tag), element)));
+        output.add(new RawHtml(userTaglet.toString(List.of(tag), element)));
         return output;
     }
 
     @Override
-    public Content getTagletOutput(Element holder, TagletWriter writer) {
+    public Content getAllBlockTagOutput(Element holder, TagletWriter writer) {
         Content output = writer.getOutputInstance();
         Utils utils = writer.configuration().utils;
         List<? extends DocTree> tags = utils.getBlockTags(holder, this);
