@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010, 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2010, 2020, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,13 +23,10 @@
 
 // key: compiler.misc.kindname.record.component
 // key: compiler.misc.kindname.record
-// key: compiler.misc.count.error
+// key: compiler.misc.count.error.plural
+// key: compiler.misc.kindname.method
 // key: compiler.err.already.defined
 // key: compiler.err.error
-// key: compiler.note.preview.filename
-// key: compiler.note.preview.recompile
-// key: compiler.note.note
 // run: backdoor
-// options: --enable-preview -source ${jdk.version}
 
 record R(int i, int i) {}
