@@ -27,6 +27,7 @@
  * RecordCompilationTests
  *
  * @test
+ * @bug 8250629 8252307 8247352 8241151 8246774
  * @summary Negative compilation tests, and positive compilation (smoke) tests for records
  * @library /lib/combo /tools/lib /tools/javac/lib
  * @modules
@@ -35,9 +36,8 @@
  *      jdk.compiler/com.sun.tools.javac.util
  *      jdk.jdeps/com.sun.tools.classfile
  * @build JavacTestingAbstractProcessor
- * @compile --enable-preview -source ${jdk.version} RecordCompilationTests.java
- * @run testng/othervm -DuseAP=false --enable-preview RecordCompilationTests
- * @run testng/othervm -DuseAP=true --enable-preview RecordCompilationTests
+ * @run testng/othervm -DuseAP=false RecordCompilationTests
+ * @run testng/othervm -DuseAP=true RecordCompilationTests
  */
 
 import java.io.File;
@@ -119,17 +119,7 @@ import static org.testng.Assert.assertEquals;
 
 @Test
 public class RecordCompilationTests extends CompilationTestCase {
-    // @@@ When records become a permanent feature, we don't need these any more
-    private static String[] PREVIEW_OPTIONS = {
-            "--enable-preview",
-            "-source", Integer.toString(Runtime.version().feature())
-    };
-
-    private static String[] PREVIEW_OPTIONS_WITH_AP = {
-            "--enable-preview",
-            "-source", Integer.toString(Runtime.version().feature()),
-            "-processor", SimplestAP.class.getName()
-    };
+    private static String[] OPTIONS_WITH_AP = {"-processor", SimplestAP.class.getName()};
 
     private static final List<String> BAD_COMPONENT_NAMES = List.of(
             "clone", "finalize", "getClass", "hashCode",
@@ -145,16 +135,20 @@ public class RecordCompilationTests extends CompilationTestCase {
         }
     }
 
+    boolean useAP;
+
     public RecordCompilationTests() {
-        boolean useAP = System.getProperty("useAP") == null ? false : System.getProperty("useAP").equals("true");
+        useAP = System.getProperty("useAP", "false").equals("true");
         setDefaultFilename("R.java");
-        setCompileOptions(useAP ? PREVIEW_OPTIONS_WITH_AP : PREVIEW_OPTIONS);
+        if (useAP) {
+            setCompileOptions(OPTIONS_WITH_AP);
+        }
         System.out.println(useAP ? "running all tests using an annotation processor" : "running all tests without annotation processor");
     }
 
     public void testMalformedDeclarations() {
         assertFail("compiler.err.premature.eof", "record R()");
-        assertFail("compiler.err.premature.eof", "record R();");
+        assertFail("compiler.err.expected", "record R();");
         assertFail("compiler.err.illegal.start.of.type", "record R(,) { }");
         assertFail("compiler.err.illegal.start.of.type", "record R((int x)) { }");
         assertFail("compiler.err.record.header.expected", "record R { }");
@@ -394,6 +388,9 @@ public class RecordCompilationTests extends CompilationTestCase {
         assertFail("compiler.err.first.statement.must.be.call.to.another.constructor",
                 "record R(int x, int y) { public R(int y, int x, int z) { this.x = this.y = 0; } }");
 
+        assertFail("compiler.err.first.statement.must.be.call.to.another.constructor",
+                "record R(int x, int y) { public R(int y, int x, int z) { super(); this.x = this.y = 0; } }");
+
         assertOK("record R(int x, int y) { " +
                  "    public R(int x, int y, int z) { this(x, y); } " +
                  "}");
@@ -488,7 +485,7 @@ public class RecordCompilationTests extends CompilationTestCase {
                 "    }\n" +
                 "}");
 
-        // Cant capture locals
+        // Can't capture locals
         assertFail("compiler.err.non-static.cant.be.ref",
                 "class R { \n" +
                         "    void m(int y) { \n" +
@@ -503,6 +500,150 @@ public class RecordCompilationTests extends CompilationTestCase {
                         "        record RR(int x) { public int x() { return y; }};\n" +
                         "    }\n" +
                         "}");
+
+        assertFail("compiler.err.non-static.cant.be.ref",
+                "class C {\n" +
+                "    public static void m() {\n" +
+                "        String hello = \"hello\";\n" +
+                "        interface I {\n" +
+                "            public default void test1() {\n" +
+                "                class X {\n" +
+                "                    public void test2() {\n" +
+                "                        System.err.println(hello);\n" +
+                "                    }\n" +
+                "                }\n" +
+                "            }\n" +
+                "        }\n" +
+                "    }\n" +
+                "}");
+
+        assertFail("compiler.err.non-static.cant.be.ref",
+                "class C {\n" +
+                "    public static void m() {\n" +
+                "        String hello = \"hello\";\n" +
+                "        record R(int i) {\n" +
+                "            public void test1() {\n" +
+                "                class X {\n" +
+                "                    public void test2() {\n" +
+                "                        System.err.println(hello);\n" +
+                "                    }\n" +
+                "                }\n" +
+                "            }\n" +
+                "        }\n" +
+                "    }\n" +
+                "}");
+
+        assertFail("compiler.err.non-static.cant.be.ref",
+                "class C {\n" +
+                "    public static void m() {\n" +
+                "        String hello = \"hello\";\n" +
+                "        enum E {\n" +
+                "            A;\n" +
+                "            public void test1() {\n" +
+                "                class X {\n" +
+                "                    public void test2() {\n" +
+                "                        System.err.println(hello);\n" +
+                "                    }\n" +
+                "                }\n" +
+                "            }\n" +
+                "        }\n" +
+                "    }\n" +
+                "}");
+
+        assertFail("compiler.err.non-static.cant.be.ref",
+                "class C {\n" +
+                "    public static void m(String param) {\n" +
+                "        interface I {\n" +
+                "            public default void test1() {\n" +
+                "                class X {\n" +
+                "                    public void test2() {\n" +
+                "                        System.err.println(param);\n" +
+                "                    }\n" +
+                "                }\n" +
+                "            }\n" +
+                "        }\n" +
+                "    }\n" +
+                "}");
+
+        assertFail("compiler.err.non-static.cant.be.ref",
+                "class C {\n" +
+                "    public static void m(String param) {\n" +
+                "        record R(int i) {\n" +
+                "            public void test1() {\n" +
+                "                class X {\n" +
+                "                    public void test2() {\n" +
+                "                        System.err.println(param);\n" +
+                "                    }\n" +
+                "                }\n" +
+                "            }\n" +
+                "        }\n" +
+                "    }\n" +
+                "}");
+
+        assertFail("compiler.err.non-static.cant.be.ref",
+                "class C {\n" +
+                "    public static void m(String param) {\n" +
+                "        enum E {\n" +
+                "            A;\n" +
+                "            public void test1() {\n" +
+                "                class X {\n" +
+                "                    public void test2() {\n" +
+                "                        System.err.println(param);\n" +
+                "                    }\n" +
+                "                }\n" +
+                "            }\n" +
+                "        }\n" +
+                "    }\n" +
+                "}");
+
+        assertFail("compiler.err.non-static.cant.be.ref",
+                "class C {\n" +
+                "    String instanceField = \"instance\";\n" +
+                "    public static void m() {\n" +
+                "        interface I {\n" +
+                "            public default void test1() {\n" +
+                "                class X {\n" +
+                "                    public void test2() {\n" +
+                "                        System.err.println(instanceField);\n" +
+                "                    }\n" +
+                "                }\n" +
+                "            }\n" +
+                "        }\n" +
+                "    }\n" +
+                "}");
+
+        assertFail("compiler.err.non-static.cant.be.ref",
+                "class C {\n" +
+                "    String instanceField = \"instance\";\n" +
+                "    public static void m(String param) {\n" +
+                "        record R(int i) {\n" +
+                "            public void test1() {\n" +
+                "                class X {\n" +
+                "                    public void test2() {\n" +
+                "                        System.err.println(instanceField);\n" +
+                "                    }\n" +
+                "                }\n" +
+                "            }\n" +
+                "        }\n" +
+                "    }\n" +
+                "}");
+
+        assertFail("compiler.err.non-static.cant.be.ref",
+                "class C {\n" +
+                "    String instanceField = \"instance\";\n" +
+                "    public static void m(String param) {\n" +
+                "        enum E {\n" +
+                "            A;\n" +
+                "            public void test1() {\n" +
+                "                class X {\n" +
+                "                    public void test2() {\n" +
+                "                        System.err.println(instanceField);\n" +
+                "                    }\n" +
+                "                }\n" +
+                "            }\n" +
+                "        }\n" +
+                "    }\n" +
+                "}");
 
         // instance fields
         assertFail("compiler.err.non-static.cant.be.ref",
@@ -520,6 +661,114 @@ public class RecordCompilationTests extends CompilationTestCase {
                         "        record RR(T t) {};\n" +
                         "    }\n" +
                         "}");
+
+        assertFail("compiler.err.non-static.cant.be.ref",
+                "class R {\n" +
+                "    static <U> U make(U u) { //method is static\n" +
+                "        interface Checker {\n" +
+                "            void check(U u);\n" +
+                "        }\n" +
+                "        return null;\n" +
+                "    }\n" +
+                "}");
+
+        assertFail("compiler.err.non-static.cant.be.ref",
+                "class LocalEnum {\n" +
+                "    static <U> U getAndSet(U u) { //method is static\n" +
+                "        enum X {\n" +
+                "            A;\n" +
+                "            U u;\n" +
+                "        }\n" +
+                "        return null;\n" +
+                "    }\n" +
+                "}\n");
+
+        assertFail("compiler.err.non-static.cant.be.ref",
+                "class R {\n" +
+                "    static <U> U make(U u) { //method is static\n" +
+                "        record Checker() {\n" +
+                "            void check(U u);\n" +
+                "        }\n" +
+                "        return null;\n" +
+                "    }\n" +
+                "}");
+
+        assertFail("compiler.err.non-static.cant.be.ref",
+                "class R {\n" +
+                "    <U> U make(U u) { // enclosing method is not static\n" +
+                "        interface Checker {\n" +
+                "            void check(U u);\n" +
+                "        }\n" +
+                "        return null;\n" +
+                "    }\n" +
+                "}");
+
+        assertFail("compiler.err.non-static.cant.be.ref",
+                "class LocalEnum {\n" +
+                "    <U> U getAndSet(U u) { // enclosing method is not static\n" +
+                "        enum X {\n" +
+                "            A;\n" +
+                "            U u;\n" +
+                "        }\n" +
+                "        return null;\n" +
+                "    }\n" +
+                "}\n");
+
+        assertFail("compiler.err.non-static.cant.be.ref",
+                "class R {\n" +
+                "    <U> U make(U u) { // enclosing method is not static\n" +
+                "        record Checker() {\n" +
+                "            void check(U u);\n" +
+                "        }\n" +
+                "        return null;\n" +
+                "    }\n" +
+                "}");
+
+        assertFail("compiler.err.non-static.cant.be.ref",
+                "class C {\n" +
+                "    public static <T> void main(String[] args) {\n" +
+                "        interface I {\n" +
+                "            public default void test1() {\n" +
+                "                class X {\n" +
+                "                    public void test2() {\n" +
+                "                        T t = null;\n" +
+                "                    }\n" +
+                "                }\n" +
+                "            }\n" +
+                "        }\n" +
+                "    }\n" +
+                "}");
+
+        assertFail("compiler.err.non-static.cant.be.ref",
+                "class C {\n" +
+                "    public static <T> void main(String[] args) {\n" +
+                "        record R(int i) {\n" +
+                "            public void test1() {\n" +
+                "                class X {\n" +
+                "                    public void test2() {\n" +
+                "                        T t = null;\n" +
+                "                    }\n" +
+                "                }\n" +
+                "            }\n" +
+                "        }\n" +
+                "    }\n" +
+                "}");
+
+        assertFail("compiler.err.non-static.cant.be.ref",
+                "class C {\n" +
+                "    public static <T> void main(String[] args) {\n" +
+                "        enum E {\n" +
+                "            A;\n" +
+                "            public void test1() {\n" +
+                "                class X {\n" +
+                "                    public void test2() {\n" +
+                "                        T t = null;\n" +
+                "                    }\n" +
+                "                }\n" +
+                "            }\n" +
+                "        }\n" +
+                "    }\n" +
+                "}");
 
         // but static fields are OK
         assertOK("class R { \n" +
@@ -544,6 +793,48 @@ public class RecordCompilationTests extends CompilationTestCase {
                 class R {
                     void m() {
                         static record RR(int x) { };
+                    }
+                }
+                """
+        );
+
+        // positive cases
+        assertOK(
+                """
+                import java.security.*;
+                class Test {
+                    static Test newInstance(Object provider) {
+                        return new Test() {
+                            private final PrivilegedExceptionAction<KeyStore> action = new PrivilegedExceptionAction<KeyStore>() {
+                                public KeyStore run() throws Exception {
+                                    if (provider == null) {}
+                                    return null;
+                                }
+                            };
+                        };
+                    }
+                }
+                """
+        );
+
+        assertOK(
+                """
+                import java.security.*;
+                class Test {
+                    static Test newInstance(Object provider) {
+                        return new Test() {
+                            int m(PrivilegedExceptionAction<KeyStore> a) { return 0; }
+                            {
+                                m(
+                                    new PrivilegedExceptionAction<KeyStore>() {
+                                        public KeyStore run() throws Exception {
+                                            if (provider == null) {}
+                                            return null;
+                                        }
+                                    }
+                                );
+                            }
+                        };
                     }
                 }
                 """
@@ -708,19 +999,21 @@ public class RecordCompilationTests extends CompilationTestCase {
     }
 
     public void testAcceptRecordId() {
+        String[] previousOptions = getCompileOptions();
         String[] testOptions = {/* no options */};
         setCompileOptions(testOptions);
-        assertOKWithWarning("compiler.warn.restricted.type.not.allowed.preview",
+        assertFail("compiler.err.illegal.start.of.type",
                 "class R {\n" +
                 "    record RR(int i) {\n" +
                 "        return null;\n" +
                 "    }\n" +
                 "    class record {}\n" +
                 "}");
-        setCompileOptions(PREVIEW_OPTIONS);
+        setCompileOptions(previousOptions);
     }
 
     public void testAnnos() throws Exception {
+        String[] previousOptions = getCompileOptions();
         String srcTemplate =
                 """
                     import java.lang.annotation.*;
@@ -746,6 +1039,12 @@ public class RecordCompilationTests extends CompilationTestCase {
                 "ElementType.TYPE_USE,ElementType.FIELD,ElementType.PARAMETER",
                 "ElementType.TYPE_USE,ElementType.FIELD,ElementType.RECORD_COMPONENT",
                 "ElementType.FIELD,ElementType.TYPE_USE",
+                "ElementType.FIELD,ElementType.CONSTRUCTOR",
+                "ElementType.FIELD,ElementType.LOCAL_VARIABLE",
+                "ElementType.FIELD,ElementType.ANNOTATION_TYPE",
+                "ElementType.FIELD,ElementType.PACKAGE",
+                "ElementType.FIELD,ElementType.TYPE_PARAMETER",
+                "ElementType.FIELD,ElementType.MODULE",
                 "ElementType.METHOD,ElementType.TYPE_USE",
                 "ElementType.PARAMETER,ElementType.TYPE_USE",
                 "ElementType.RECORD_COMPONENT,ElementType.TYPE_USE",
@@ -755,8 +1054,6 @@ public class RecordCompilationTests extends CompilationTestCase {
         );
 
         String[] generalOptions = {
-                "--enable-preview",
-                "-source", Integer.toString(Runtime.version().feature()),
                 "-processor", Processor.class.getName(),
                 "-Atargets="
         };
@@ -777,7 +1074,7 @@ public class RecordCompilationTests extends CompilationTestCase {
             /* if FIELD is one of the targets then there must be a declaration annotation applied to the field, apart from
              * the type annotation
              */
-            if (target.contains("FIELD")) {
+            if (target.contains("ElementType.FIELD")) {
                 checkAnno(classFile,
                         (RuntimeAnnotations_attribute)findAttributeOrFail(
                                 field.attributes,
@@ -788,7 +1085,7 @@ public class RecordCompilationTests extends CompilationTestCase {
             }
 
             // lets check now for the type annotation
-            if (target.contains("TYPE_USE")) {
+            if (target.contains("ElementType.TYPE_USE")) {
                 checkTypeAnno(
                         classFile,
                         (RuntimeVisibleTypeAnnotations_attribute)findAttributeOrFail(field.attributes, RuntimeVisibleTypeAnnotations_attribute.class),
@@ -803,7 +1100,7 @@ public class RecordCompilationTests extends CompilationTestCase {
             /* if PARAMETER is one of the targets then there must be a declaration annotation applied to the parameter, apart from
              * the type annotation
              */
-            if (target.contains("PARAMETER")) {
+            if (target.contains("ElementType.PARAMETER")) {
                 checkParameterAnno(classFile,
                         (RuntimeVisibleParameterAnnotations_attribute)findAttributeOrFail(
                                 init.attributes,
@@ -813,7 +1110,7 @@ public class RecordCompilationTests extends CompilationTestCase {
                 assertAttributeNotPresent(init.attributes, RuntimeVisibleAnnotations_attribute.class);
             }
             // let's check now for the type annotation
-            if (target.contains("TYPE_USE")) {
+            if (target.contains("ElementType.TYPE_USE")) {
                 checkTypeAnno(
                         classFile,
                         (RuntimeVisibleTypeAnnotations_attribute) findAttributeOrFail(init.attributes, RuntimeVisibleTypeAnnotations_attribute.class),
@@ -827,7 +1124,7 @@ public class RecordCompilationTests extends CompilationTestCase {
             /* if METHOD is one of the targets then there must be a declaration annotation applied to the accessor, apart from
              * the type annotation
              */
-            if (target.contains("METHOD")) {
+            if (target.contains("ElementType.METHOD")) {
                 checkAnno(classFile,
                         (RuntimeAnnotations_attribute)findAttributeOrFail(
                                 accessor.attributes,
@@ -837,7 +1134,7 @@ public class RecordCompilationTests extends CompilationTestCase {
                 assertAttributeNotPresent(accessor.attributes, RuntimeVisibleAnnotations_attribute.class);
             }
             // let's check now for the type annotation
-            if (target.contains("TYPE_USE")) {
+            if (target.contains("ElementType.TYPE_USE")) {
                 checkTypeAnno(
                         classFile,
                         (RuntimeVisibleTypeAnnotations_attribute)findAttributeOrFail(accessor.attributes, RuntimeVisibleTypeAnnotations_attribute.class),
@@ -852,7 +1149,7 @@ public class RecordCompilationTests extends CompilationTestCase {
             /* if RECORD_COMPONENT is one of the targets then there must be a declaration annotation applied to the
              * field, apart from the type annotation
              */
-            if (target.contains("RECORD_COMPONENT")) {
+            if (target.contains("ElementType.RECORD_COMPONENT")) {
                 checkAnno(classFile,
                         (RuntimeAnnotations_attribute)findAttributeOrFail(
                                 record.component_info_arr[0].attributes,
@@ -862,7 +1159,7 @@ public class RecordCompilationTests extends CompilationTestCase {
                 assertAttributeNotPresent(record.component_info_arr[0].attributes, RuntimeVisibleAnnotations_attribute.class);
             }
             // lets check now for the type annotation
-            if (target.contains("TYPE_USE")) {
+            if (target.contains("ElementType.TYPE_USE")) {
                 checkTypeAnno(
                         classFile,
                         (RuntimeVisibleTypeAnnotations_attribute)findAttributeOrFail(
@@ -875,7 +1172,7 @@ public class RecordCompilationTests extends CompilationTestCase {
         }
 
         // let's reset the default compiler options for other tests
-        setCompileOptions(PREVIEW_OPTIONS);
+        setCompileOptions(previousOptions);
     }
 
     private void checkTypeAnno(ClassFile classFile,
@@ -998,7 +1295,6 @@ public class RecordCompilationTests extends CompilationTestCase {
                         throw new AssertionError("unexpected element kind");
                 }
             }
-            Assert.check(targetSet.isEmpty(), targetSet.toString());
         }
 
         private void checkTypeAnnotations(Element rootElement) {
@@ -1304,6 +1600,108 @@ public class RecordCompilationTests extends CompilationTestCase {
                 record R(int i) {
                     R {
                         (this).i = i;
+                    }
+                }
+                """
+        );
+    }
+
+    public void testNoNPEStaticAnnotatedFields() {
+        assertOK(
+                """
+                import java.lang.annotation.Native;
+                record R() {
+                    @Native public static final int i = 0;
+                }
+                """
+        );
+        assertOK(
+                """
+                import java.lang.annotation.Native;
+                class Outer {
+                    record R() {
+                        @Native public static final int i = 0;
+                    }
+                }
+                """
+        );
+        assertOK(
+                """
+                import java.lang.annotation.Native;
+                class Outer {
+                    void m() {
+                        record R () {
+                            @Native public static final int i = 0;
+                        }
+                    }
+                }
+                """
+        );
+    }
+
+    public void testDoNotAllowCStyleArraySyntaxForRecComponents() {
+        assertFail("compiler.err.record.component.and.old.array.syntax",
+                """
+                record R(int i[]) {}
+                """
+        );
+        assertFail("compiler.err.record.component.and.old.array.syntax",
+                """
+                record R(String s[]) {}
+                """
+        );
+        assertFail("compiler.err.record.component.and.old.array.syntax",
+                """
+                record R<T>(T t[]) {}
+                """
+        );
+    }
+
+    public void testNoWarningForSerializableRecords() {
+        if (!useAP) {
+            /* dont execute this test when the default annotation processor is on as it will fail due to
+             * spurious warnings
+             */
+            appendCompileOptions("-Werror", "-Xlint:serial");
+            assertOK(
+                    """
+                    import java.io.*;
+                    record R() implements java.io.Serializable {}
+                    """
+            );
+            removeLastCompileOptions(2);
+        }
+    }
+
+    public void testAnnotationsOnVarargsRecComp() {
+        assertOK(
+                """
+                import java.lang.annotation.*;
+
+                @Target({ElementType.TYPE_USE})
+                @interface Simple {}
+
+                record R(@Simple int... val) {
+                    static void test() {
+                        R rec = new R(10, 20);
+                    }
+                }
+                """
+        );
+        assertOK(
+                """
+                import java.lang.annotation.*;
+
+                @Target({ElementType.TYPE_USE})
+                @interface SimpleContainer{ Simple[] value(); }
+
+                @Repeatable(SimpleContainer.class)
+                @Target({ElementType.TYPE_USE})
+                @interface Simple {}
+
+                record R(@Simple int... val) {
+                    static void test() {
+                        R rec = new R(10, 20);
                     }
                 }
                 """
